[package]
name = "delta-cool"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.1.1", features = ["async-std", "image"] }
anyhow = "1.0.31"
# deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", branch = "master" }
deltachat = { path = "../deltachat-core-rust" }
async-std = "1.6.0"
log = "0.4.8"
femme = "2.0.1"
lazy_static = "1.4.0"
futures = "0.3.5"
dirs = "2.0.2"
glob = "0.3.0"
iced_native = "0.2.2"
time = "0.2.16"
